Update: Added carousel to Bagged Sand product

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ nav a:hover::after {
         <img src="images/Bags.jpg" alt="Bagged Sand 1" class="w-full h-full object-cover">
       </div>
       <div class="carousel-item absolute inset-0 opacity-0 transition-opacity duration-500">
-        <img src="images/Bag 2.jpg" alt="Bagged Sand 3" class="w-full h-full object-cover">
+        <img src="images/bag 2.jpg" alt="bSag 2" class="w-full h-full object-cover">
       </div>
     </div>
 
