Fix mobile nav, improve header layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#ffffff">
     <title>JV Traders - Sand Supplier Bangalore</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
@@ -32,9 +33,23 @@
         }
     </script>
     <style>
+        @media (max-width: 640px) {
+            .container {
+                padding-left: 1rem;
+                padding-right: 1rem;
+            }
+            h1 {
+                font-size: 1.875rem !important;
+                line-height: 2.25rem !important;
+            }
+            .product-card {
+                margin-bottom: 1.5rem;
+            }
+        }
         .carousel-item {
             transition: opacity 0.5s ease-in-out;
         }
+        
         .carousel-item.active {
             opacity: 1;
         }
@@ -75,45 +90,44 @@ nav a:hover::after {
 
 <body class="bg-gray-50">
    <!-- Header & Navigation Bar -->
-<header id="header" class="fixed top-0 left-0 right-0 z-50 backdrop-blur-md bg-white/80 shadow-xl border-b border-gray-200">
-    <div class="container mx-auto px-6 py-3">
-        <div class="flex items-center justify-between">
-            <!-- Logo -->
-            <div class="flex items-center space-x-3">
-                <a href="#">
-                    <img src="images/Logo.jpg" alt="JV Traders Logo" class="h-10 w-auto rounded-md shadow-sm border border-gray-200">
-                </a>
-                <span class="text-2xl font-extrabold tracking-wide text-white bg-blue-900/90 px-3 py-1 rounded-lg shadow-md transition hover:scale-105 hover:bg-blue-900 hover:text-white">
-                    JV TRADERS
-                </span>
-            </div>
-
-            <!-- Navigation -->
-            <nav class="hidden md:flex space-x-6">
-                <a href="#home" class="text-gray-700 hover:text-blue-900 font-medium transition-all">Home</a>
-                <a href="#products" class="text-gray-700 hover:text-blue-900 font-medium transition-all">Products</a>
-                <a href="#vehicles" class="text-gray-700 hover:text-blue-900 font-medium transition-all">Vehicles</a>
-                <a href="#about" class="text-gray-700 hover:text-blue-900 font-medium transition-all">About</a>
-                <a href="#contact" class="text-gray-700 hover:text-blue-900 font-medium transition-all">Contact</a>
-            </nav>
-
-            <!-- Mobile Menu Button -->
-            <button id="mobile-menu-button" class="md:hidden text-gray-800 hover:text-blue-900 transition" aria-label="Toggle mobile menu">
-                <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-                </svg>
-            </button>
+<<header id="header" class="fixed top-0 left-0 right-0 z-50 bg-white/90 backdrop-blur-md border-b border-gray-200 shadow-md">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between">
+        
+        <!-- Logo + Brand -->
+        <div class="flex items-center space-x-3">
+            <a href="#">
+                <img src="images/Logo.jpg" alt="JV Traders Logo" class="h-10 w-auto rounded-md shadow-sm border border-gray-200">
+            </a>
+            <span class="text-lg sm:text-2xl font-extrabold tracking-wide text-white bg-blue-900/90 px-2 py-1 rounded-lg shadow-md">
+                JV TRADERS
+            </span>
         </div>
 
-        <!-- Mobile Menu -->
-        <div id="mobile-menu" class="md:hidden hidden bg-white/90 border-t border-gray-200 rounded-b-xl shadow-md transition-all duration-300">
-            <div class="px-6 py-4 space-y-4">
-                <a href="#home" class="block text-gray-700 hover:text-blue-900 font-semibold">Home</a>
-                <a href="#products" class="block text-gray-700 hover:text-blue-900 font-semibold">Products</a>
-                <a href="#vehicles" class="block text-gray-700 hover:text-blue-900 font-semibold">Vehicles</a>
-                <a href="#about" class="block text-gray-700 hover:text-blue-900 font-semibold">About</a>
-                <a href="#contact" class="block text-gray-700 hover:text-blue-900 font-semibold">Contact</a>
-            </div>
+        <!-- Desktop Nav -->
+        <nav class="hidden md:flex space-x-6">
+            <a href="#home" class="text-gray-700 hover:text-blue-900 font-medium transition-all">Home</a>
+            <a href="#products" class="text-gray-700 hover:text-blue-900 font-medium transition-all">Products</a>
+            <a href="#vehicles" class="text-gray-700 hover:text-blue-900 font-medium transition-all">Vehicles</a>
+            <a href="#about" class="text-gray-700 hover:text-blue-900 font-medium transition-all">About</a>
+            <a href="#contact" class="text-gray-700 hover:text-blue-900 font-medium transition-all">Contact</a>
+        </nav>
+
+        <!-- Mobile Menu Button -->
+        <button id="mobile-menu-button" class="md:hidden p-2 rounded hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500" aria-label="Toggle mobile menu">
+            <svg class="w-7 h-7 text-gray-800" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+        </button>
+    </div>
+
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="md:hidden hidden bg-white border-t border-gray-200 shadow-md">
+        <div class="px-6 py-4 space-y-3">
+            <a href="#home" class="block text-gray-700 hover:text-blue-900 font-semibold">Home</a>
+            <a href="#products" class="block text-gray-700 hover:text-blue-900 font-semibold">Products</a>
+            <a href="#vehicles" class="block text-gray-700 hover:text-blue-900 font-semibold">Vehicles</a>
+            <a href="#about" class="block text-gray-700 hover:text-blue-900 font-semibold">About</a>
+            <a href="#contact" class="block text-gray-700 hover:text-blue-900 font-semibold">Contact</a>
         </div>
     </div>
 </header>
@@ -127,11 +141,7 @@ nav a:hover::after {
         mobileMenu.classList.toggle('hidden');
     });
 </script>
-</body>
-</html>
-
-
-  <!-- Section 1: Home - Welcome Mat -->
+<!-- Section 1: Home - Welcome Mat -->
 <section id="home" class="relative min-h-screen flex items-center justify-center pt-24 overflow-hidden">
     <!-- Background Image with Overlay -->
     <img src="images/HomePhoto.jpg" alt="High-quality construction sand"
@@ -139,24 +149,23 @@ nav a:hover::after {
     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent"></div>
 
     <!-- Content -->
-    <div class="relative z-10 text-center text-white px-4 max-w-4xl mx-auto animate__animated animate__fadeInUp">
-        <h1 class="text-4xl md:text-6xl font-extrabold mb-6 leading-tight tracking-tight drop-shadow-lg">
-            Quality Sand, <br class="hidden md:block" /> Delivered On Time.
+    <div class="relative z-10 text-center text-white px-4 sm:px-6 md:px-10 max-w-3xl mx-auto animate__animated animate__fadeInUp">
+        <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold mb-6 leading-tight tracking-tight drop-shadow-lg">
+            Quality Sand,<br class="hidden sm:block" /> Delivered On Time.
         </h1>
-        <p class="text-lg md:text-xl text-gray-200 mb-8">
+        <p class="text-base sm:text-lg md:text-xl text-gray-200 mb-8">
             Your trusted supplier for construction, landscaping, and specialty sand across the metro area.
         </p>
-        <div class="flex flex-col sm:flex-row justify-center gap-4">
-            <a href="#contact" class="bg-yellow-500 text-white font-bold px-8 py-4 rounded-full hover:bg-yellow-600 transition shadow-lg text-lg">
+        <div class="flex flex-col sm:flex-row justify-center gap-4 px-4">
+            <a href="#contact" class="bg-yellow-500 text-white font-bold px-6 py-3 sm:px-8 sm:py-4 rounded-full hover:bg-yellow-600 transition shadow-lg text-base sm:text-lg">
                 📦 Request a Free Quote
             </a>
-            <a href="#products" class="bg-white text-gray-800 font-bold px-8 py-4 rounded-full hover:bg-gray-100 transition shadow-lg text-lg">
+            <a href="#products" class="bg-white text-gray-800 font-bold px-6 py-3 sm:px-8 sm:py-4 rounded-full hover:bg-gray-100 transition shadow-lg text-base sm:text-lg">
                 📋 See Our Products
             </a>
         </div>
     </div>
 </section>
-
 
 
 
@@ -1149,4 +1158,5 @@ nav a:hover::after {
 </script>
 
 </body>
-</html> 
+</html> </body>
+</html>
